tests/macros/float/plugin.rs
fn main() {
    let q = discourse::questions![Float { plugin: todo!() }];
}
